[tool.poetry]
name = "pythontemplate"
version = "0.1.0"
description = ""
authors = ["Dillon <dillonb07dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.285"
pre-commit = "^3.3.3"
sourcery = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
